--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">KidBeaconMVP</string>
+    <string name="title_activity_main_login">MainLoginActivity</string>
+    <string name="principal">Principal</string>
 </resources>
